# succotash

./: stack.yaml  succotash.cabal
app/: Application.hs  Main.hs  Site.hs
